--- a/index.html
+++ b/index.html
@@ -1,42 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>Frontend Mentor | Calculator app</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css-reset.css">
   <link rel="stylesheet" href="./style/style.css">
+  <title>Frontend Mentor | Calculator app</title>
 </head>
-<body>
 
-<header>
-  <div><img src="" alt="logo"></div>
-  <div class="toggle-container">
-    <span>THEME</span>
-    <label class="toggle">
-      <input type="checkbox">
-      <span for="" class="slider"></span>
-    </label>
-  </div>
-
-  <div class="toggle-container">
-    <span>THEME</span>
-    <label class="toggle">
-      <input type="radio" name="theme" id="theme" value="1" checked>
-      <label for="theme">1</label>
-      <input type="radio" name="theme" id="theme" value="2">
-      <label for="theme">2</label>
-      <input type="radio" name="theme" id="theme" value="3">
-      <label for="theme">3</label>
-    </label>
-</div>
-</header>
-
-<footer>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</footer>
+<body class="theme2">
+  <div class="container">
+    <header>
+      <span class="logo">calc</span>
+      <div class="toggle-container">
+        <div></div>
+        <div class="toggle-label">
+          <label for="theme">1</label>
+          <label for="theme">2</label>
+          <label for="theme">3</label>
+        </div>
+        <div class="toggle-title">Theme</div>
+        <div class="toggle">
+          <input type="radio" name="theme" id="theme" value="1">
+          <input type="radio" name="theme" id="theme" value="2">
+          <input type="radio" name="theme" id="theme" value="3">
+          <span class="slider"></span>
+        </div>
+      </div>
+    </header>
+    <main class="calculator">
+      <div class="calculator-display">
+        <span>399,981</span>
+      </div>
+      <div class="calculator-btns">
+        <button class="btn">7</button>
+        <button class="btn">8</button>
+        <button class="btn">9</button>
+        <button class="btn btn-del">del</button>
+        <button class="btn">4</button>
+        <button class="btn">5</button>
+        <button class="btn">6</button>
+        <button class="btn">+</button>
+        <button class="btn">1</button>
+        <button class="btn">2</button>
+        <button class="btn">3</button>
+        <button class="btn">-</button>
+        <button class="btn">.</button>
+        <button class="btn">0</button>
+        <button class="btn">/</button>
+        <button class="btn">x</button>
+        <button class="btn btn-reset">reset</button>
+        <button class="btn btn-equal">=</button>
+      </div>
+    </main>
+    <footer>
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Your Name Here</a>.
+      </div>
+    </footer>
+    <script src="./app.js"></script>
 </body>
+
 </html>
