--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="one">
 
 <head>
   <meta charset="UTF-8">
@@ -9,8 +9,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css-reset.css">
-  <link rel="stylesheet" href="./style/style.css">
+  <!-- <link rel="stylesheet" href="./src/style/css-reset.css"> -->
+  <link rel="stylesheet" href="./src/style/style.scss">
   <title>Frontend Mentor | Calculator app</title>
 </head>
 
@@ -35,28 +35,28 @@
       </div>
     </header>
     <main class="calculator">
-      <div class="calculator-display">
-        <span>399,981</span>
+      <div class="calculator-display-container">
+        <span id="calculator-display" class="calculator-display"></span>
       </div>
       <div class="calculator-btns">
-        <button class="btn">7</button>
-        <button class="btn">8</button>
-        <button class="btn">9</button>
-        <button class="btn btn-del">del</button>
-        <button class="btn">4</button>
-        <button class="btn">5</button>
-        <button class="btn">6</button>
-        <button class="btn">+</button>
-        <button class="btn">1</button>
-        <button class="btn">2</button>
-        <button class="btn">3</button>
-        <button class="btn">-</button>
-        <button class="btn">.</button>
-        <button class="btn">0</button>
-        <button class="btn">/</button>
-        <button class="btn">x</button>
-        <button class="btn btn-reset">reset</button>
-        <button class="btn btn-equal">=</button>
+        <button class="btn btn-number" data-key="7">7</button>
+        <button class="btn btn-number" data-key="8">8</button>
+        <button class="btn btn-number" data-key="9">9</button>
+        <button class="btn btn-del" data-key="Backspace">del</button>
+        <button class="btn btn-number" data-key="4">4</button>
+        <button class="btn btn-number" data-key="5">5</button>
+        <button class="btn btn-number" data-key="6">6</button>
+        <button class="btn btn-operator" data-key="+">+</button>
+        <button class="btn btn-number" data-key="1">1</button>
+        <button class="btn btn-number" data-key="2">2</button>
+        <button class="btn btn-number" data-key="3">3</button>
+        <button class="btn btn-operator" data-key="-">-</button>
+        <button class="btn" data-key=".">.</button>
+        <button class="btn btn-number" data-key="0">0</button>
+        <button class="btn btn-operator" data-key="/">/</button>
+        <button class="btn btn-operator" data-key="*">x</button>
+        <button class="btn btn-reset" data-key="Escape">reset</button>
+        <button class="btn btn-equal" data-key="Enter">=</button>
       </div>
     </main>
     <footer>
@@ -65,7 +65,7 @@
         Coded by <a href="#">Your Name Here</a>.
       </div>
     </footer>
-    <script src="./app.js"></script>
+    <script src="./src/app.js"></script>
 </body>
 
 </html>
