--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <button class="btn btn-number" data-key="7">7</button>
         <button class="btn btn-number" data-key="8">8</button>
         <button class="btn btn-number" data-key="9">9</button>
-        <button class="btn btn-del" data-key="Backspace">del</button>
+        <button class="btn btn-del" data-key="Backspace" title="press Backspace">del</button>
         <button class="btn btn-number" data-key="4">4</button>
         <button class="btn btn-number" data-key="5">5</button>
         <button class="btn btn-number" data-key="6">6</button>
@@ -55,14 +55,14 @@
         <button class="btn btn-number" data-key="0">0</button>
         <button class="btn btn-operator" data-key="/">/</button>
         <button class="btn btn-operator" data-key="*">x</button>
-        <button class="btn btn-reset" data-key="Escape">reset</button>
-        <button class="btn btn-equal" data-key="Enter">=</button>
+        <button class="btn btn-reset" data-key="Escape" title="press Esc">reset</button>
+        <button class="btn btn-equal" data-key="Enter" title="press Enter">=</button>
       </div>
     </main>
     <footer>
       <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Your Name Here</a>.
+        Coded by <a href="https://github.com/angela-tylee" target="_blank" rel="noopener noreferrer">angelalee</a>.
       </div>
     </footer>
     <script src="./src/app.js"></script>
