--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         Coded by <a href="https://github.com/angela-tylee" target="_blank" rel="noopener noreferrer">angelalee</a>.
       </div>
     </footer>
-    <script src="./src/app.js"></script>
+    <script type="module" src="./src/app.js"></script>
 </body>
 
 </html>
