Added function to handle comma format, control `0` and `.` behavior, reformat `*`, `/` as `x` and `÷`

--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="./src/style/css-reset.css"> -->
   <link rel="stylesheet" href="./src/style/style.scss">
   <title>Frontend Mentor | Calculator app</title>
 </head>
@@ -36,7 +34,7 @@
     </header>
     <main class="calculator">
       <div class="calculator-display-container">
-        <span id="calculator-display" class="calculator-display"></span>
+        <p id="calculator-display" class="calculator-display"></p>
       </div>
       <div class="calculator-btns">
         <button class="btn btn-number" data-key="7">7</button>
